--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ jsonschema-specifications==2024.10.1
 kiwisolver==1.4.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.9.2
+matplotlib
 mdurl==0.1.2
 narwhals==1.12.1
 numpy==1.26.4
